...
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Catálogo de Artistas (Visitante)" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_artists"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingHorizontal="8dp"
        android:clipToPadding="false"
        app:layout_constraintTop_toBottomOf="@id/tv_artists_header"
        app:layout_constraintBottom_toBottomOf="parent"
...
