...
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Medium"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tvArtistName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:textSize="36sp"
            android:textStyle="bold"
...
