...
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:importantForAccessibility="no" />
        </FrameLayout>

        <TextView
            android:id="@+id/tv_collector_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
...
