...
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_collectors"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingHorizontal="8dp"
        android:clipToPadding="false"
        app:layout_constraintTop_toBottomOf="@id/tv_collectors_header"
        app:layout_constraintBottom_toBottomOf="parent"
...
